--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   api:
     build: .
     container_name: fast_api_clean
-    command: uvicorn app.main:app --host=0.0.0.0 --port=80 --reload
+    command: uvicorn src.entrypoint.fastapi:app --host=0.0.0.0 --port=80 --reload
     volumes:
       - .:/app
     ports:
@@ -19,7 +19,7 @@ services:
       - db
   db:
     image: postgres:13-alpine
-    container_name: fast_api_database
+    container_name: fast_api_postgree
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     ports:
